@@ -1,7 +1,7 @@
 /* device.c - device manager */
 /*
  *  GRUB  --  GRand Unified Bootloader
- *  Copyright (C) 2002,2005,2007  Free Software Foundation, Inc.
+ *  Copyright (C) 2002,2005,2007,2008  Free Software Foundation, Inc.
  *
  *  GRUB is free software: you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -95,7 +95,7 @@ grub_device_iterate (int (*hook) (const char *name))
       
       dev = grub_device_open (disk_name);
       if (! dev)
-	return 1;
+	return 0;
       
       if (dev->disk && dev->disk->has_partitions)
 	if (grub_partition_iterate (dev->disk, iterate_partition))
